<resources>
    <string name="app_name">Dragon Ball DAM2</string>
    <string name="nombre_del_personaje">Nombre del personaje</string>
    <string name="todo">TODO</string>
    <string name="fuerza">FUERZA:</string>
    <string name="defensa">DEFENSA:</string>
    <string name="mochila">MOCHILA:</string>
    <string name="vida">VIDA:</string>
    <string name="monedero">MONEDERO:</string>
    <string name="textview">TextView</string>
    <string name="volver_a_empezar">volver a empezar</string>
    <string name="comezar_aventura">comezar aventura</string>
    <string name="comienza_la_aventura_pulsa_el_dado_para_avanzar_cuidado_puedes_encontrarte_enemigos">Comienza la aventura, pulsa el DADO para avanzar. CUIDADO puedes encontrarte enemigos</string>
    <string name="recoger">Recoger</string>
    <string name="continuar">continuar</string>
    <string name="wish">WISH</string>
    <string name="go">GO</string>
    <string name="kame">KAME</string>
    <string name="aceptar">Aceptar</string>
    <string name="kaio">KAIO</string>
    <string name="entrar">entrar</string>
    <string name="comerciar">comerciar</string>
    <string name="luchar">luchar</string>
    <string name="huir">huir</string>
    <string name="saiyan">saiyan</string>
    <string name="namekiano">namekiano</string>
    <string name="terrricola">terrricola</string>
    <string name="androide">androide</string>
    <string name="siete_esferas">Has reunido las siete esferas del dragón! Puedes pedir un deseo.</string>
    <string name="comprar">comprar</string>
    <string name="vender">vender</string>
    <string name="cancelar">cancelar</string>
    <string name="mas">+</string>
    <string name="menos">-</string>
    <string name="_0">0</string>
    <string name="confirmar">confirmar</string>
    <string name="salir">salir</string>
    <string name="objeto">objeto</string>
    <string name="atacar">atacar</string>
    <string name="reiniciar">reiniciar</string>
    <string name="fortuna">fortuna</string>
    <string name="poder">poder</string>
    <string name="_1000">1000</string>
</resources>