<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/galaxy"
    tools:context=".Combate">

    <Button
        android:id="@+id/atacar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atacar"
        android:background="@drawable/button_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

    <Button
        android:id="@+id/objetoC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_done"
        android:text="@string/objeto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />

    <Button
        android:id="@+id/huirC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/huir"
        android:background="@drawable/button_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.962" />

    <LinearLayout
        android:layout_width="132dp"
        android:layout_height="239dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107">

        <ImageView
            android:id="@+id/enemyCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/blackcard"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="132dp"
        android:layout_height="239dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.739">

        <ImageView
            android:id="@+id/userCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/blackcard"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="94dp"
        android:layout_height="79dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842">

        <ImageView
            android:id="@+id/userIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/androideicon"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/barraVidaE"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037">

        <LinearLayout
            android:id="@+id/vidaE"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@drawable/volver"
            android:orientation="horizontal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/barraVidaU"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:gravity="right"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.852"
        tools:ignore="RtlHardcoded">

        <LinearLayout
            android:id="@+id/vidaP"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@drawable/comenzar"
            android:orientation="horizontal" />
    </LinearLayout>

    <ImageView
        android:id="@+id/vs"
        android:layout_width="125dp"
        android:layout_height="73dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438"
        app:srcCompat="@drawable/vs"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/enemyIcon"
        android:layout_width="94dp"
        android:layout_height="79dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"
        app:srcCompat="@drawable/blackicon"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>